Publish statistics of resources

--- a/cmd/gtfsproxy/docs.html
+++ b/cmd/gtfsproxy/docs.html
@@ -17,5 +17,10 @@
         <p>
         To download a GTFS file, you need to go to <code>/{GTFS_ID}</code>, there the <i>{GTFS_ID}</i> is the one defined by the Transitland Atlas.
         </p>
+
+        <h2>Statistics</h2>
+        <p>
+        Statistics for this server can be found <a href="/stats">here</a>.
+        </p>
 	</body>
 </html>
